fix: card overflow and slider horizontal scroll

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -8,6 +8,7 @@
   border-radius: 1.2rem;
   background: var(--slider-color);
   box-shadow: 0 -0 15px 1px rgba(0, 0, 0, 0.05);
+  overflow: hidden;
 
   @include mixin.respond(tablet) {
     grid-template-columns: repeat(2, 1fr);
